--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,12 +1,6 @@
 .root {
     background-color: #E5E5E5;
     display: grid;
-    grid-template-areas: 
-    'header'
-    'lead'
-    'intro'
-    'photo-grid'
-    'places'
-    'cover'
-    'footer';
+    justify-items: center;
+    /* row-gap: 92px; */
 }
