--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,15 @@
 /* NORMALIZE */
 @import url(../vendor/normalize.css);
 
+/* FONTS */
+@import url(../vendor/fonts/fonts.css);
+
 /* ROOT */
 @import url(../blocks/root/root.css);
 
+/* HEADER */
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/_lang/header__lang-link_lang-ru.css);
+@import url(../blocks/header/__lang-link/_lang/header__lang-link_lang-en.css);
