--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,5 +4,7 @@
   /* width: calc(); */
   font-size: 24px;
   line-height: 28px;
-  text-decoration-line: none;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
 }
