--- a/pages/index.css
+++ b/pages/index.css
@@ -13,3 +13,11 @@
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-link/_lang/header__lang-link_lang-ru.css);
 @import url(../blocks/header/__lang-link/_lang/header__lang-link_lang-en.css);
+
+/* LEAD */
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+
