--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,11 @@
 .header__logo {
   width: 176px;
   height: 52px;
-  left: 48px;
-  top: 28px;
+}
+
+@media screen and (max-width: 425px){
+  .header__logo {
+    width: 142px;
+    height: 42px;
+  }
 }
