--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,26 @@
 .header {
-margin: 28px 48px 0;
-width: 1184px;
-height: 52px;
-left: 48px;
-top: 28px;
-display: flex;
-justify-content: space-between;
+  margin: 28px 48px 56px;
+  height: 52px;
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+}
+
+@media screen and (max-width: 425px){
+    .header {
+        margin: 16px 16px 48px;
+        height: 42px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .header {
+        margin: 28px 24px 48px;
+    }
+}
+
+@media screen and (max-width: 1024px){
+    .header {
+        margin: 28px 48px 48px;
+    }
 }
