--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,29 @@
 .lead__image {
-    width: 984px;
-    height: 615px;
-    margin-top: 64px;
+    max-width: 984px;
+    max-height: 615px;
+    /* margin: 0 auto 8px; */
+}
+
+@media screen and (max-width: 1024px){
+    .lead__image {
+        max-width: 928px;
+        max-height: 580px;
+        /* margin: 0 auto 8px; */
+    }
+}
+
+@media screen and (max-width: 768px){
+    .lead__image {
+        max-width: 100%;
+        max-height: 480px;
+        /* margin: 0 auto 8px; */
+    }
+}
+
+@media screen and (max-width: 425px){
+    .lead__image {
+        max-width: 100%;
+        max-height: 200px;
+        /* margin: 0 auto 8px; */
+    }
 }
