--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,11 +1,27 @@
 .lead__subtitle {
 width: 640px;
 height: 72px;
+margin: 0 auto 64px;
 font-style: normal;
 font-weight: normal;
 font-size: 30px;
 line-height: 36px;
-/* or 120% */
 text-align: center;
 color: #FFFFFF;
+}
+
+@media screen and (max-width: 1024px){
+    .lead__subtitle {
+        margin: 0 auto 56px;
+    }
+}
+
+@media screen and (max-width: 767px){
+    .lead__subtitle {
+        margin: 0 auto 40px;
+        width: 288px;
+        height: 40px;
+        font-size: 16px;
+        line-height: 20px;
+    }
 }
