--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,12 +1,21 @@
 .lead__title {
 width: 720px;
 height: 200px;
-margin-top: 56px;
+margin: 0px auto 32px;
 text-align: center;
 font-style: normal;
 font-weight: 900;
 font-size: 96px;
 line-height: 100px;
-/* or 104% */
 color: white;
+}
+
+@media screen and (max-width: 767px){
+    .lead__title {
+        width: 288px;
+        height: 88px;
+        margin: 0 16px 16px;
+        font-size: 40px;
+        line-height: 44px;
+    }
 }
