--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,4 +2,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* margin: 0 auto 92px; */
+    justify-items: center;
+}
+
+@media screen and (max-width: 425px){
+    .lead {
+        margin: 0px auto 64px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .lead {
+        margin: 0 auto 88px;
+    }
+}
+
+@media screen and (max-width: 1024px){
+    .lead {
+        margin: 0 auto 92px;
+    }
 }
