--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,7 +1,6 @@
 .root {
     background-color: #2A2C2F;
-    display: grid;
-    justify-items: center;
-    /* row-gap: 92px; */
-    font-family: Inter;
+    font-family: 'Inter';
+    margin: 0 auto 0;
+    max-width: 1280px;
 }
