--- a/pages/index.css
+++ b/pages/index.css
@@ -10,9 +10,9 @@
 /* HEADER */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/__lang-link/header__lang-link.css);
-@import url(../blocks/header/__lang-link/_lang/header__lang-link_lang-ru.css);
-@import url(../blocks/header/__lang-link/_lang/header__lang-link_lang-en.css);
+@import url(../blocks/header/__links/header__links.css);
+@import url(../blocks/header/__links/__link/header__link-ru.css);
+@import url(../blocks/header/__links/__link/header__link-en.css);
 
 /* LEAD */
 @import url(../blocks/lead/lead.css);
@@ -21,3 +21,14 @@
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 
+/* INTRO */
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+
+/* PHOTO-GRID */
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+
+/*  */
