tuesday place-grid

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,5 @@
 .header {
+  max-width: 1184px;
   margin: 28px 48px 56px;
   height: 52px;
   display: flex;
@@ -6,10 +7,9 @@
   justify-items: center;
 }
 
-@media screen and (max-width: 425px){
+@media screen and (max-width: 1024px){
     .header {
-        margin: 16px 16px 48px;
-        height: 42px;
+        margin: 28px 48px 48px;
     }
 }
 
@@ -19,8 +19,9 @@
     }
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 425px){
     .header {
-        margin: 28px 48px 48px;
+        margin: 16px 16px 48px;
+        height: 42px;
     }
 }
