--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,6 +3,12 @@ font-style: normal;
 font-weight: normal;
 font-size: 16px;
 line-height: 163%;
-/* or 26px */
 color: #FFFFFF;
+}
+
+@media screen and (max-width: 425px){
+    .intro__text {
+        font-size: 16px;
+        line-height: 163%;
+    }
 }
