--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,10 +1,15 @@
 .intro__title {
-width: 690px;
-height: 58px;
 font-style: normal;
 font-weight: 900;
 font-size: 54px;
 line-height: 58px;
-/* identical to box height, or 107% */
 color: #FFFFFF;
+margin: 0;
+}
+
+@media screen and (max-width: 425px){
+    .intro__title {
+        font-size: 32px;
+        line-height: 35px;
+    }
 }
