--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,5 @@
 .lead__subtitle {
-width: 640px;
+max-width: 640px;
 height: 72px;
 margin: 0 auto 64px;
 font-style: normal;
@@ -16,10 +16,10 @@ color: #FFFFFF;
     }
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 680px){
     .lead__subtitle {
         margin: 0 auto 40px;
-        width: 288px;
+        max-width: 288px;
         height: 40px;
         font-size: 16px;
         line-height: 20px;
