--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,5 @@
 .lead__title {
-width: 720px;
+max-width: 720px;
 height: 200px;
 margin: 0px auto 32px;
 text-align: center;
@@ -10,12 +10,13 @@ line-height: 100px;
 color: white;
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 680px){
     .lead__title {
-        width: 288px;
+        max-width: 288px;
         height: 88px;
-        margin: 0 16px 16px;
+        margin: 0 auto 16px;
         font-size: 40px;
         line-height: 44px;
     }
 }
+/* иначе слишком убого смотрится */
