--- a/pages/index.css
+++ b/pages/index.css
@@ -14,21 +14,39 @@
 @import url(../blocks/header/__links/__link/header__link-ru.css);
 @import url(../blocks/header/__links/__link/header__link-en.css);
 
+
+/* MAIN */
+@import url(../blocks/content/content.css);
+
 /* LEAD */
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
-@import url(../blocks/lead/__image/lead__image.css);
-@import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/lead/__figure/lead__figure.css);
+@import url(../blocks/lead/__figure/__image/lead__image.css);
+@import url(../blocks/lead/__figure/__caption/lead__caption.css);
 
 /* INTRO */
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list/__numbers/intro__numbers.css);
 
 /* PHOTO-GRID */
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
+/* PLACES */
+@import url(../blocks/places/places.css);
+
+/* PLACE */
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+
 /*  */
+
