--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,28 @@
 .place__image {
     max-width: 460px;
+    grid-area: place__image;
+}
+
+@media screen and (max-width: 1200px){
+    .place__image {
+        max-width: 440px;
+    }
+}
+
+@media screen and (max-width: 950px){
+    .place__image {
+        max-width: 340px;
+    }
+}
+
+@media screen and (max-width: 730px){
+    .place__image {
+        max-width: 320px;
+    }
+}
+
+@media screen and (max-width: 425px){
+    .place__image {
+        margin: 0 -16px 0;
+    }
 }
