--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,13 +1,23 @@
 .place {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-    grid-template-rows: repeat(4,1fr);
-    /* grid-template-areas:  */ 
-    /* "place__image place__title";
-    /* grid-template-columns: repeat(5, 1fr); */
-    /* grid-template-rows: repeat(auto-fit, 213px);
-    gap: 16px;
-    justify-content: center;
-    margin-bottom: 92px; */
-    
+    grid-template-areas: 
+    "place__title place__website"
+    "place__image place__text";
+    row-gap: 48px;
+    column-gap: 40px;
+    align-content: center;
+}
+
+@media screen and (max-width:1024px){
+    .place {
+        column-gap: 32px;
+    }
+}
+
+@media screen and (max-width:655px){
+    .place {
+        display: flex;
+        flex-direction: column;
+        max-width: 288px;
+    }
 }
