--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,7 +1,19 @@
 .places {
     display: grid;
     grid-template-rows: repeat(5, 1fr);
-    margin: 0;
+    margin: 0 0 92px;
     justify-items: center;
     gap: 80px;    
+}
+
+@media screen and (max-width: 768px){
+    .places {
+        margin-bottom: 90px;
+    }
+}
+
+@media screen and (max-width: 425px){
+    .places {
+        margin-bottom: 66px;
+    }
 }
