--- a/pages/index.css
+++ b/pages/index.css
@@ -50,5 +50,13 @@
 @import url(../blocks/place/__text/place__text.css);
 @import url(../blocks/place/__text/__paragraph/place__paragraph.css);
 
-/*  */
+/* COVER */
+
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__link/cover__link.css);
+@import url(../blocks/cover/__link/__title/cover__title.css);
+@import url(../blocks/cover/__link/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__background-image/cover__background-image.css);
+
+/* FOOTER */
 
