--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -4,7 +4,7 @@ font-weight: 900;
 font-size: 54px;
 line-height: 58px;
 color: #FFFFFF;
-margin: 0;
+margin: 0 0 40px;
 }
 
 @media screen and (max-width: 425px){
