--- a/pages/index.css
+++ b/pages/index.css
@@ -60,3 +60,7 @@
 
 /* FOOTER */
 
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__links/__link/footer__link.css);
+@import url(../blocks/footer/__author/footer__author.css);
