--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -31,13 +31,18 @@
     }
 }
 
-@media screen and (max-width: 900px){
+@media screen and (max-width: 1023px){
     .cover__link {
         min-width: 768px;
         min-height: 480px;
     }
 }
-@media screen and (max-width: 425px){
+@media screen and (max-width: 767px) {
+    .cover__link {
+        min-width: 100%;
+    }
+}
+@media screen and (max-width: 550px){
     .cover__link {
         min-width: 320px;
         min-height: 200px;
