--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,7 @@
     max-width: 1184px;
     display: flex;
     flex-direction: row;
-    margin: 118px auto 0;
+    margin: 92px auto 0;
     justify-content: space-between;
     padding-bottom: 24px;
 }
@@ -17,13 +17,14 @@
 @media screen and (max-width: 910px){
     .footer {
         max-width: 720px;
+        margin-top: 88px;
     }
 }
 
 @media screen and (max-width: 700px){
     .footer {
         flex-direction: column;
-        margin: 64px auto 0;
+        margin-top: 64px;
         max-width: 288px;
     }
 }
