--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   max-width: 1184px;
   margin: 28px 48px 56px;
-  height: 52px;
+  /* height: 52px; */
   display: flex;
   justify-content: space-between;
   justify-items: center;
@@ -22,6 +22,6 @@
 @media screen and (max-width: 425px){
     .header {
         margin: 16px 16px 48px;
-        height: 42px;
+        /* height: 42px; */
     }
 }
