--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,6 @@
 .lead__subtitle {
 max-width: 640px;
-height: 72px;
+/* height: 72px; */
 margin: 0 auto 64px;
 font-style: normal;
 font-weight: normal;
@@ -20,7 +20,7 @@ color: #FFFFFF;
     .lead__subtitle {
         margin: 0 auto 40px;
         max-width: 288px;
-        height: 40px;
+        /* height: 40px; */
         font-size: 16px;
         line-height: 20px;
     }
