--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -6,6 +6,7 @@
     row-gap: 48px;
     column-gap: 40px;
     align-content: center;
+    margin-bottom: 80px;
 }
 
 @media screen and (max-width:1024px){
@@ -14,10 +15,27 @@
     }
 }
 
+@media screen and (max-width:768px){
+    .place {
+        column-gap: 28px;
+        margin-bottom: 73px;
+    }
+}
+
 @media screen and (max-width:655px){
     .place {
-        display: flex;
+        /* display: flex;
         flex-direction: column;
-        max-width: 288px;
+        max-width: 288px; */
+        grid-template-areas: 
+        "place__title"
+        "place__website"
+        "place__image"
+        "place__text";
+        margin-bottom: 50px;
     }
+}
+
+.place:last-child {
+    margin-bottom: 0;
 }
