--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,9 +1,12 @@
 .places {
-    display: grid;
+    /* display: grid;
     grid-template-rows: repeat(5, 1fr);
+    gap: 80px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 0 0 92px;
     justify-items: center;
-    gap: 80px;    
 }
 
 @media screen and (max-width: 768px){
