--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,17 +1,24 @@
-.header__link-ru {
+.header__link {
     width: 30px;
     height: 28px;
     text-decoration-line: none;
-    margin-right: 18px;
     color: white;
 }
 
-.header__link-ru:active {
+.header__link:first-of-type {
+    margin-right: 18px;
+}
+
+/* .header__link:active {
     opacity: 0.5;
+} */
+
+.header__link:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 425px){
-    .header__link-ru {
+    .header__link {
       width: 22px;
       height: 20px;
     }
