--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -9,6 +9,7 @@
     text-decoration: none;
     background-image: url(../../../images/cover/cover-trains.jpg);
     background-size: cover;
+    background-position: center;
 }
 
 .cover__link::before {
@@ -24,25 +25,27 @@
     opacity: 0.8;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
     .cover__link {
         min-width: 1024px;
         min-height: 640px;
     }
 }
 
-@media screen and (max-width: 1023px){
+@media screen and (max-width: 1023px) {
     .cover__link {
         min-width: 768px;
         min-height: 480px;
     }
 }
+
 @media screen and (max-width: 767px) {
     .cover__link {
         min-width: 100%;
     }
 }
-@media screen and (max-width: 550px){
+
+@media screen and (max-width: 550px) {
     .cover__link {
         min-width: 320px;
         min-height: 200px;
