--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,9 +1,10 @@
 .intro__list {
-font-style: normal;
-font-weight: bold;
-font-size: 12px;
-line-height: 18px;
-color: #FFFFFF;
-padding: 0;
-list-style-type: none;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 18px;
+    color: #FFFFFF;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
 }
