--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,13 +1,14 @@
 .intro__title {
-font-style: normal;
-font-weight: 900;
-font-size: 54px;
-line-height: 58px;
-color: #FFFFFF;
-margin: 0 0 40px;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 54px;
+    line-height: 58px;
+    color: #FFFFFF;
+    /* margin: 0 0 40px; */
+    margin: 0;
 }
 
-@media screen and (max-width: 425px){
+@media screen and (max-width: 425px) {
     .intro__title {
         font-size: 32px;
         line-height: 35px;
