--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -3,26 +3,27 @@
     grid-area: place__image;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
     .place__image {
         max-width: 440px;
     }
 }
 
-@media screen and (max-width: 950px){
+@media screen and (max-width: 950px) {
     .place__image {
         max-width: 340px;
     }
 }
 
-@media screen and (max-width: 730px){
+@media screen and (max-width: 730px) {
     .place__image {
         max-width: 320px;
     }
 }
 
-@media screen and (max-width: 425px){
+
+/* @media screen and (max-width: 425px) {
     .place__image {
         margin: 0 -16px 0;
     }
-}
+} */
