--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,19 +1,18 @@
 .place__paragraph {
-  max-width: 484px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 163%;
-  color: #FFFFFF;
-  margin: 0;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 163%;
+    color: #FFFFFF;
+    margin: 0 0 26px;
 }
 
-.place__paragraph:nth-child(1) {
-  margin-bottom: 26px;
+.place__paragraph:last-child {
+    margin-bottom: 0;
 }
 
-@media screen and (max-width: 730px){
-  .place__paragraph {
-      font-size: 16px;
-  }
+@media screen and (max-width: 768px) {
+    .place__paragraph {
+        font-size: 16px;
+    }
 }
