--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,16 +7,15 @@
     color: white;
     grid-area: place__title;
     margin: 0;
-    
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
     .place__title {
         max-width: 440px;
     }
 }
 
-@media screen and (max-width: 950px){
+@media screen and (max-width: 950px) {
     .place__title {
         max-width: 340px;
         font-size: 42px;
@@ -24,10 +23,11 @@
     }
 }
 
-@media screen and (max-width: 730px){
+@media screen and (max-width: 730px) {
     .place__title {
         max-width: 288px;
         font-size: 32px;
         line-height: 35px;
+        margin-left: 16px;
     }
 }
