--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -6,14 +6,15 @@
     max-width: 456px;
 }
 
-@media screen and (max-width: 950px){
+@media screen and (max-width: 950px) {
     .place__website {
         max-width: 352px;
     }
 }
 
-@media screen and (max-width: 730px){
+@media screen and (max-width: 730px) {
     .place__website {
         max-width: 288px;
+        margin-left: 16px;
     }
 }
