--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,38 +1,30 @@
 .place {
     display: grid;
-    grid-template-areas: 
-    "place__title place__website"
-    "place__image place__text";
+    grid-template-areas: "place__title place__website" "place__image place__text";
     row-gap: 48px;
     column-gap: 40px;
     align-content: center;
     margin-bottom: 80px;
 }
 
-@media screen and (max-width:1024px){
+@media screen and (max-width:1024px) {
     .place {
         column-gap: 32px;
     }
 }
 
-@media screen and (max-width:768px){
+@media screen and (max-width:768px) {
     .place {
         column-gap: 28px;
         margin-bottom: 73px;
     }
 }
 
-@media screen and (max-width:655px){
+@media screen and (max-width:655px) {
     .place {
-        /* display: flex;
-        flex-direction: column;
-        max-width: 288px; */
-        grid-template-areas: 
-        "place__title"
-        "place__website"
-        "place__image"
-        "place__text";
+        grid-template-areas: "place__title" "place__website" "place__image" "place__text";
         margin-bottom: 50px;
+        row-gap: 32px;
     }
 }
 
