--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,6 +1,6 @@
 .root {
     background-color: #2A2C2F;
-    font-family: 'Inter', 'Arial';
+    font-family: 'Inter', 'Arial', sans-serif;
     margin: 0 auto 0;
     max-width: 1280px;
     -webkit-font-smoothing: antialiased;
