--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,11 +4,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 1184px;
+    width: 100%;
     min-height: 740px;
     text-decoration: none;
     background-image: url(../../../images/cover/cover-trains.jpg);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
 }
 
@@ -25,29 +26,20 @@
     opacity: 0.8;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1024px) {
     .cover__link {
-        min-width: 1024px;
         min-height: 640px;
     }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 768px) {
     .cover__link {
-        min-width: 768px;
-        min-height: 480px;
-    }
-}
-
-@media screen and (max-width: 767px) {
-    .cover__link {
-        min-width: 100%;
+        min-height: 480px
     }
 }
 
 @media screen and (max-width: 550px) {
     .cover__link {
-        min-width: 320px;
         min-height: 200px;
     }
 }
