--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -10,10 +10,11 @@
     z-index: 1;
 }
 
-@media screen and (max-width: 549px) {
+@media screen and (max-width: 550px) {
     .cover__subtitle {
         max-width: 288px;
         font-size: 14px;
         line-height: 16px;
+        margin-top: 16px;
     }
 }
