--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,10 +1,11 @@
 .header__link {
     text-decoration-line: none;
     color: white;
+    margin-right: 18px;
 }
 
-.header__link:first-of-type {
-    margin-right: 18px;
+.header__link:last-of-type {
+    margin-right: 0;
 }
 
 .header__link:hover {
